[tool.poetry]
name = "cornJob"
version = "0.1.0"
description = ""
authors = ["ranger <haiven_123@163.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
pydantic = {extras = ["dotenv"], version = "^1.7.3"}
PyMySQL = "^1.0.2"
APScheduler = "^3.6.3"
ujson = "^4.0.1"
loguru = "^0.5.3"
uvicorn = "^0.13.3"
dateutils = "^0.6.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
autoflake = "^1.4"
flake8 = "^3.8.4"
mypy = "^0.790"
isort = "^5.0"
pre-commit = "^2.8.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
